Adding support for file upload

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -38,5 +38,9 @@
   "SearchEvent": {
     "dataSource": "db",
     "public": true
+  },
+  "attachment": {
+    "dataSource": "storage",
+    "public": true
   }
 }
