--- a/server/model-config.json
+++ b/server/model-config.json
@@ -35,7 +35,7 @@
     "dataSource": "db",
     "public": false
   },
-  "SearchEvent": {
+  "EmergencyEvent": {
     "dataSource": "mongo",
     "public": true
   },
