--- a/package.json
+++ b/package.json
@@ -11,14 +11,26 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "compression": "^1.0.3",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.5.2",
+    "express-flash": "0.0.2",
+    "express-session": "^1.15.6",
     "helmet": "^1.3.0",
+    "jade": "^1.11.0",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^5.0.0",
+    "loopback-component-passport": "^3.4.1",
     "loopback-component-storage": "^3.3.1",
     "loopback-connector-mongodb": "^1.18.1",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-ldapauth": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
   },
