--- a/server/config.json
+++ b/server/config.json
@@ -17,6 +17,7 @@
       "extended": true,
       "limit": "100kb"
     },
-    "cors": false
+    "cors": false,
+    "cookieSecret" :  "985c9df14cd0bd020e1e515e43b6e1e4"
   }
 }
