--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "loopback-component-storage": "^3.3.1",
     "loopback-connector-mongodb": "^1.18.1",
     "passport-facebook": "^2.1.1",
+    "passport-facebook-token": "^3.3.0",
     "passport-google-oauth": "^1.0.0",
     "passport-ldapauth": "^2.0.0",
     "passport-local": "^1.0.0",
